overflow homepage fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.App{
+  overflow-x: hidden;
+}
 @media (max-width: 1024px) {
 
   #who1img,
